# foundation-protocol

./: .gitignore  README.es.md  README.ja.md  README.ko.md  README.md  README.vi.md  README.zh.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Pay.md  SECURITY.MD  Trade&Trust-OutsourcingDeliveryScenario.md  Trade&Trust-ReputationSystem.md  Trade&Trust-ReputationSystem.zh-CN.md  Trade&Trust-TODO.md  Trade&Trust-TrustProtocol.md  Trade&Trust-demo.md  Trade&Trust.md  callowner-unification.md  carbon-copy.md  checkpoint-design.md  fp-implementation-companion-zh.md  index.md  mail-message-system.md  storage-structure.md
docs/assets/: extra.css
docs/develop/: federation.md  index.md  mcp-bridge.md  quickstart.md  storage.md  trade-workflows.md
docs/learn/: carbon-copy.md  checkpoint.md  index.md  mail.md  message.md
docs/security/: checkpoint-and-authorization.md  federation-and-friends.md  identity-and-keys.md  index.md  known-gaps.md  mail-envelope.md
docs/trade-and-trust/: index.md  interactions.md  lifecycle.md  messages.md  payment.md  reputation.md  trust-protocol.md
example/: case1.py  case2.py  case_mcp.py  case_mcp_cross_host.py  case_mcp_filesystem.py  case_mcp_http.py  case_mcp_list_tools.py  case_mcp_list_tools_cross_host.py  case_mcp_list_tools_same_host.py  case_trade_approval.py  case_trade_direct.py  case_trade_escrow.py  case_trade_negotiate.py  case_trade_rework.py  mcp_server_echo.py  mcp_server_echo_http.py
fp/: __init__.py  entity.py  handler.py  host.py  mail.py  mailbox.py  message.py
fp/core/: __init__.py  base.py  checkpoint.py  cryptor.py  session.py  wellknown.py
fp/trade/: __init__.py  arbiter_checkpoint.py  (+9 more)
tests/: __init__.py  conftest.py  test_call_owner.py  test_contract_status_message.py  test_entity.py  test_host.py  test_host_load_child_url.py  test_mail.py  test_message.py  test_trade_reputation.py  test_trade_trust_protocol.py
(+10 files in other folders)
