[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fp"]

[tool.hatch.build.targets.sdist]
include = [
    "/fp",
    "/tests",
    "/docs",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
    "/mkdocs.yml",
]

[project]
name = "foundation-protocol"
version = "0.1.0"
description = "Foundation Protocol (FP) reference Python runtime"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "FP Contributors" }
]
keywords = ["fp", "agent", "protocol", "runtime", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cryptography>=45.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/FoundationAgents/foundation-protocol"
Documentation = "https://foundationagents.github.io/foundation-protocol/"
Issues = "https://github.com/FoundationAgents/foundation-protocol/issues"
Repository = "https://github.com/FoundationAgents/foundation-protocol"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "jsonschema>=4.20",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
asyncio_mode = "auto"
